2008-01-13  Dan Nicolaescu  <dann@ics.uci.edu>

	* (unexsunos4): Remove file, system not supported anymore.

	* (src/m/mips.h):
	* (src/m/intel386.h):
	* callproc.c:
	* config.in:
	* ecrt0.c:
	* emacs.c:
	* fileio.c:
	* frame.c:
	* getpagesize.h:
	* keyboard.c:
	* lread.c:
	* process.c:
	* puresize.h:
	* sysdep.c:
	* systty.h:
	* syswait.h:
	* unexec.c:
	* xdisp.c:
	* alloc.c: Remove code containing references to symbols defined by
	unsupported systems.

2008-01-11  Kenichi Handa  <handa@ni.aist.go.jp>

	* coding.c (detect_coding_mask): Fix previous change.

2008-01-10  Chong Yidong  <cyd@stupidchicken.com>

	* process.c (wait_reading_process_output): Check for window
	changes caused by timers.

2008-01-09  Kenichi Handa  <handa@ni.aist.go.jp>

	* coding.c (detect_coding_iso2022): New arg
	latin_extra_code_state.  Allow Latin extra codes only
	when *latin_extra_code_state is nonzero.
	(detect_coding_mask): If there is a NULL byte, detect the encoding
	as UTF-16 or binary.  If Latin extra codes exist, detect the
	encoding as ISO-2022 only when there's no other proper encoding is
	found.

2008-01-08  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* frame.c (Fmake_terminal_frame): Use #ifdef MAC_OS8 instead of
	#ifdef MAC_OS.

2008-01-08  Richard Stallman  <rms@gnu.org>

	* fileio.c (Ffile_name_directory, Fexpand_file_name): Doc fixes.

2008-01-06  Nick Roberts  <nickrob@snap.net.nz>

	* keyboard.c (parse_menu_item): Don't enclose key bindings on
	menu bar in parentheses.

2008-01-06  Dan Nicolaescu  <dann@ics.uci.edu>

	* m/7300.h:
	* m/acorn.h:
	* m/alliant-2800.h:
	* m/alliant.h:
	* m/alliant1.h:
	* m/alliant4.h:
	* m/altos.h:
	* m/amdahl.h:
	* m/apollo.h:
	* m/att3b.h:
	* m/aviion-intel.h:
	* m/aviion.h:
	* m/celerity.h:
	* m/clipper.h:
	* m/cnvrgnt.h:
	* m/convex.h:
	* m/cydra5.h:
	* m/delta88k.h:
	* m/dpx2.h:
	* m/dual.h:
	* m/elxsi.h:
	* m/f301.h:
	* m/gould-np1.h:
	* m/gould.h:
	* m/i860.h:
	* m/ibmps2-aix.h:
	* m/ibmrt-aix.h:
	* m/ibmrt.h: